# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
gendiff/: __init__.py  files_to_diff.py  generate_diff.py  parser.py
gendiff/formaters/: json_format.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py  test_generate_diff.py
